--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <title>Heavy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="manifest" href="/manifest.json">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/pwa/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/pwa/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/pwa/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/pwa/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/pwa/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/pwa/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/pwa/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/pwa/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/pwa/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/pwa/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/pwa/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/pwa/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/pwa/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/pwa/ms-icon-144x144.png">
+    <meta name="theme-color" content="#2b2b2b">
 </head>
 <body>
 <div id="root"></div>
+<script>
+    if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/worker.js', { scope: '/' }).then(function(reg) {
+            // регистрация сработала
+            console.log('Registration succeeded. Scope is ' + reg.scope);
+        }).catch(function(error) {
+            // регистрация прошла неудачно
+            console.log('Registration failed with ' + error);
+        });
+    }
+</script>
 <script src="/dist/index.bundle.js"></script>
 </body>
 </html>
